bad/bin_op_and_class_int.example_compiler_output
ERROR
[1mbad/bin_op_and_class_int.lat:5:8: [1;31merror: [0;1moperator && is defined only for `boolean` values, not `Y` and `int`[m
	new Y && 42;
	      [1;32m^[m
